Prevent changing type of existing docker volume
Ticket: #21927

--- a/ui/sections/containers/controls/table-volume.reel/table-row-volume.reel/table-row-volume.html
+++ b/ui/sections/containers/controls/table-volume.reel/table-row-volume.reel/table-row-volume.html
@@ -33,7 +33,8 @@
             },
             "bindings": {
                 "disabled": {"<-": "@owner.object.isLocked"},
-                "selectedValue": {"<->": "@owner.object.origin"}
+                "selectedValue": {"<->": "@owner.object.origin"},
+                "isReadOnly": {"<-": "!@owner.isNew"}
             }
         },
 
