--- a/ui/sections/containers/controls/table-volume.reel/table-volume.html
+++ b/ui/sections/containers/controls/table-volume.reel/table-volume.html
@@ -50,7 +50,8 @@
         "newEntry": {
             "prototype": "./table-row-volume.reel",
             "properties": {
-                "element": {"#": "newEntry"}
+                "element": {"#": "newEntry"},
+                "isNew": true
             },
             "bindings": {
                 "inspector": {"<-": "@owner.inspector"},
