Add support for directories which the search users/groups component.

--- a/ui/controls/search-groups.reel/search-groups.html
+++ b/ui/controls/search-groups.reel/search-groups.html
@@ -17,6 +17,7 @@
             },
             "bindings": {
                 "value": {"<->": "@owner.entry"},
+                "labelExpression": {"<-": "@owner.labelExpression"},
                 "labelPath": {"<-": "@owner.labelPath"},
                 "valuePath": {"<-": "@owner.valuePath"},
                 "label": {"<-": "@owner.label"},
