--- a/ui/controls/search-users.reel/search-users.html
+++ b/ui/controls/search-users.reel/search-users.html
@@ -18,6 +18,7 @@
             "bindings": {
                 "value": {"<->": "@owner.entry"},
                 "label": {"<-": "@owner.label"},
+                "labelExpression": {"<-": "@owner.labelExpression"},
                 "disabled": {"<-": "@owner.disabled"},
                 "isLoading": {"<-": "@owner.isLoading"},
                 "labelPath": {"<-": "@owner.labelPath"},
