--- a/ui/controls/cascading-list.reel/cascading-list-item.reel/cascading-list-item.html
+++ b/ui/controls/cascading-list.reel/cascading-list-item.reel/cascading-list-item.html
@@ -22,13 +22,14 @@
             ]
         },
 
-        "loading": {
+        "spinner": {
             "prototype": "blue-shark/ui/spinner.reel",
             "properties": {
-                "element": {"#": "loading"}
+                "element": {"#": "spinner"},
+                "centerInContainer": true
             },
             "bindings": {
-                "classList.has('hide')": {"<-": "!@content.isLoadingComponent"}
+                "isShown": {"<-": "@content.isLoadingComponent"}
             }
         },
 
@@ -48,7 +49,7 @@
 </head>
 <body>
     <div data-montage-id="owner" class="CascadingListItem">
-        <div data-montage-id="loading" class="CascadingListItem-spinner"></div>
+        <div data-montage-id="spinner"></div>
         <div data-montage-id="content" class="CascadingListItem-content"></div>
     </div>
 </body>
