adds IX logo to sideboard

--- a/ui/dashboard/sideboard.reel/sideboard.html
+++ b/ui/dashboard/sideboard.reel/sideboard.html
@@ -85,10 +85,13 @@
                 <div data-montage-id="tasksIcon"></div>
             </div>
             <div data-montage-id="scroller" class="Sideboard-scroller">
-                <div class="g-padding">
+                <div class="flush-bottom g-padding">
                     <div data-montage-id="alerts" class="g-margin-bottom"></div>
                     <div data-montage-id="tasks"></div>
                 </div>
+            </div>
+            <div class="Sideboard-logo">
+                <a href="http://www.ixsystems.com" target="_blank"><img src="../../../assets/images/ix_logo_text.png" alt="IX Systems Logo"></a>
             </div>
             <div data-montage-id="toggleSideboard" class="Sideboard-toggleSideboard Button--naked Button--icon">
                 <div>
