--- a/ui/icons/freenas-icon.reel/freenas-icon.html
+++ b/ui/icons/freenas-icon.reel/freenas-icon.html
@@ -16,7 +16,17 @@
     <div data-montage-id="owner" class="FreenasIcon">
         <svg width="32" height="32" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
             <title>freenas-icon</title>
-            <path d="M6.118 20.294c2.274 0 4.117-1.843 4.117-4.118 0-2.274-1.843-4.117-4.117-4.117S2 13.9 2 16.175c0 2.275 1.844 4.118 4.118 4.118zM7.493 9.677c1.137 1.97 3.655 2.644 5.625 1.507 1.97-1.137 2.644-3.655 1.507-5.625C13.488 3.59 10.97 2.914 9 4.05 7.03 5.19 6.356 7.707 7.493 9.677zm9.882-4.118c-1.137 1.97-.462 4.487 1.507 5.624 1.97 1.137 4.488.462 5.625-1.507 1.137-1.97.462-4.488-1.507-5.625-1.97-1.137-4.488-.462-5.625 1.507zm8.507 6.5c-2.274 0-4.117 1.842-4.117 4.116 0 2.275 1.843 4.118 4.117 4.118S30 18.45 30 16.176c0-2.274-1.844-4.117-4.118-4.117zm-1.375 10.616c-1.137-1.97-3.655-2.644-5.625-1.507-1.97 1.136-2.644 3.654-1.507 5.624 1.137 1.97 3.656 2.644 5.625 1.507 1.97-1.136 2.644-3.655 1.507-5.624zm-9.882 4.118c1.137-1.97.462-4.488-1.507-5.625-1.97-1.138-4.488-.463-5.625 1.506C6.356 24.646 7.03 27.164 9 28.3c1.97 1.138 4.488.463 5.625-1.506zm1.375-6.5c2.274 0 4.118-1.843 4.118-4.118 0-2.274-1.844-4.117-4.118-4.117s-4.118 1.842-4.118 4.116c0 2.275 1.844 4.118 4.118 4.118z" fill="currentColor" fill-rule="evenodd"/>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 59">
+            <g fill="none" fill-rule="evenodd">
+                <path fill="#FFFFFF" d="M36.998,23.344 C37.337,23.162 37.463,22.739 37.28,22.4 C37.098,22.061 36.675,21.935 36.337,22.118 L25.627,27.894 L14.918,22.118 C14.578,21.935 14.156,22.061 13.974,22.4 C13.791,22.739 13.917,23.162 14.256,23.344 L24.93,29.101 L24.93,43.207 C24.93,43.592 25.242,43.904 25.627,43.904 C26.012,43.904 26.324,43.592 26.324,43.207 L26.324,29.101 L36.998,23.344"/>
+                <polyline fill="currentColor" id="corral-1" points="24.98 11.031 24.98 .572 .619 14.638 9.681 19.865 24.98 11.031"/>
+                <polyline fill="currentColor" id="corral-2" points="9.058 20.982 0 15.757 0 43.834 9.058 38.609 9.058 20.982"/>
+                <polyline fill="currentColor" id="corral-3" points=".634 44.944 24.98 59 24.98 48.541 9.696 39.717 .634 44.944"/>
+                <polyline fill="currentColor" id="corral-4" points="26.292 48.541 26.292 59 50.634 44.946 41.573 39.719 26.292 48.541"/>
+                <polyline fill="currentColor" id="corral-5" points="42.215 20.978 42.215 38.613 51.272 43.838 51.272 15.753 42.215 20.978"/>
+                <polyline fill="currentColor" id="corral-6" points="50.65 14.636 26.292 .572 26.292 11.031 41.589 19.863 50.65 14.636"/>
+            </g>
+        </svg>
         </svg>
     </div>
 </body>
