--- a/ui/sections/containers/inspectors/docker-collection.reel/docker-collection.html
+++ b/ui/sections/containers/inspectors/docker-collection.reel/docker-collection.html
@@ -30,7 +30,7 @@
                 "context": {"<-": "@owner.context"},
                 "canDelete": {"<-": "!@owner.object._isNew"},
                 "canRevert": {"<-": "!@owner.object._isNew"},
-                "classList.has('has-loading-spinner')": {"<-": "@owner.isLoading"}
+                "isLoading": {"<-": "@owner.isLoading"}
             }
         },
 
