--- a/ui/sections/containers/inspectors/docker-image-pull.reel/docker-image-pull.html
+++ b/ui/sections/containers/inspectors/docker-image-pull.reel/docker-image-pull.html
@@ -27,7 +27,7 @@
             },
             "bindings": {
                 "isSaveDisabled": {"<-": "!@owner._selectedImage || !@owner._selectedHost"},
-                "classList.has('has-loading-spinner')": {"<-": "@owner.isLoading"},
+                "isLoading": {"<-": "@owner.isLoading"},
                 "context": {"<-": "@owner.context"}
             }
         },
