--- a/ui/sections/containers/inspectors/docker-network.reel/docker-network.html
+++ b/ui/sections/containers/inspectors/docker-network.reel/docker-network.html
@@ -32,7 +32,7 @@
                 "context": {"<-": "@owner.context"},
                 "canDelete": {"<-": "!@owner.object._isNew"},
                 "canRevert": {"<-": "!@owner.object._isNew && @inspector.canSave"},
-                "classList.has('has-loading-spinner')": {"<-": "@owner.isLoading"}
+                "isLoading": {"<-": "@owner.isLoading"}
             }
         },
 
