--- a/ui/sections/containers/inspectors/settings.reel/settings.html
+++ b/ui/sections/containers/inspectors/settings.reel/settings.html
@@ -14,7 +14,7 @@
                 "_availablesDockersOptions": {"<-": "@owner._availablesDockers.map{{label: name, value: id}}"}
             }
         },
-        
+
         "inspector": {
             "prototype": "ui/inspectors/inspector.reel",
             "properties": {
@@ -26,7 +26,7 @@
             },
             "bindings": {
                 "context": {"<-": "@owner.context"},
-                "classList.has('has-loading-spinner')": {"<-": "@owner.isLoading"}
+                "isLoading": {"<-": "@owner.isLoading"}
             }
         },
 
