removes spinner from boot-environment to make it more generic

--- a/ui/sections/system/inspectors/boot-pool.reel/boot-pool.html
+++ b/ui/sections/system/inspectors/boot-pool.reel/boot-pool.html
@@ -9,9 +9,6 @@
             "properties": {
                 "element": {"#": "owner"}
             },
-            "bindings": {
-                "classList.has('has-loading-spinner')": {"<-": "!!@owner._isLocked"}
-            },
             "listeners": [
                 {
                     "type": "action",
@@ -35,7 +32,8 @@
                 "isFooterHidden": true
             },
             "bindings": {
-                "context": {"<-": "@owner.context"}
+                "context": {"<-": "@owner.context"},
+                "isLoading": {"<-": "!!@owner._isLocked"}
             }
         },
         "bytesSizeConverter": {
