replaces wizard loading spinner

--- a/ui/sections/wizard/inspectors/wizard.reel/wizard.html
+++ b/ui/sections/wizard/inspectors/wizard.reel/wizard.html
@@ -17,6 +17,9 @@
             "prototype": "blue-shark/ui/spinner.reel",
             "properties": {
                 "element": {"#": "loading"}
+            },
+            "bindings": {
+                "isShown": {"<-": "@owner._isLoading || @stepPlaceholder.isLoadingComponent"}
             }
         },
 
