--- a/ui/sign-in.reel/sign-in.html
+++ b/ui/sign-in.reel/sign-in.html
@@ -88,14 +88,12 @@
     <div data-montage-id="owner" class="SignIn">
         <div class="SignIn-content">
             <div data-montage-id="browserMessage" class="SignIn-browserMessage"></div>
-            <img src="../../assets/images/logo.png" class="SignIn-logo" alt="FreeNas Logo">
+            <img src="../../assets/images/corral-logo.svg" class="SignIn-logo" alt="FreeNas Corral Logo">
             <div data-montage-id="infoText" class="SignIn-infoText"></div>
             <div data-montage-id="errorMessage" class="SignIn-error-message "></div>
             <input type="text" data-montage-id="userName" class="SignIn-userName g-margin-bottom--half" autocapitalize="none"></input>
             <input type="password" data-montage-id="password" class="SignIn-userName g-margin-bottom--double"></input>
-            <button data-montage-id="submit" class="SignIn-submit Button--primary Button--block Button--large Button--loader">
-                <svg><use xlink:href="#i-freenasIcon"/></svg>
-            </button>
+            <button data-montage-id="submit" class="SignIn-submit Button--primary Button--block Button--large Button--loader"></button>
         </div>
     </div>
 </body>
