Allow deleting replication along with their calendar tasks (or vice versa) (#616)
and several fixes to replications

Ticket: #21773

--- a/ui/inspectors/calendar-task.reel/calendar-task.html
+++ b/ui/inspectors/calendar-task.reel/calendar-task.html
@@ -51,7 +51,8 @@
             },
             "bindings": {
                 "context": {"<-": "@owner.context"},
-                "isLoading": {"<-": "!@owner.object"}
+                "isLoading": {"<-": "!@owner.object"},
+                "extraDeleteFlags": {"<-": "@owner.extraDeleteFlags"}
             }
         },
         "name": {
