--- a/ui/sections/storage/inspectors/replication.reel/replication.html
+++ b/ui/sections/storage/inspectors/replication.reel/replication.html
@@ -46,7 +46,8 @@
                 "controller": {"@": "owner"}
             },
             "bindings": {
-                "context": {"<-": "@owner.context"}
+                "context": {"<-": "@owner.context"},
+                "extraDeleteFlags": {"<-": "@owner.extraDeleteFlags"}
             }
         },
         "datasetTreeController": {
