refactor search multiple users/groups components.

--- a/ui/controls/search-groups-multiple.reel/search-groups-multiple.html
+++ b/ui/controls/search-groups-multiple.reel/search-groups-multiple.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
-    <link rel="stylesheet" type="text/css" href="search-groups-multiple.css">
     <script type="text/montage-serialization">
     {
         "owner": {
@@ -18,12 +16,12 @@
                 "controller": {"@": "owner"}
             },
             "bindings": {
-                "values": {"<->": "@owner.values"},
-                "entries": {"<-": "@owner.entries"},
+                "values": {"<->": "@owner.entries"},
                 "label": {"<-": "@owner.label"},
                 "disabled": {"<-": "@owner.disabled"},
                 "isLoading": {"<-": "@owner.isLoading"},
                 "initialOptions": {"<-": "@owner.initialOptions"},
+                "labelExpression": {"<-": "@owner.labelExpression"},
                 "hasNoneButton": {"<-": "@owner.hasNoneButton"},
                 "labelPath": {"<-": "@owner.labelPath"},
                 "valuePath": {"<-": "@owner.valuePath"},
