fix ipv4 converter bug

--- a/ui/controls/ip-aliases.reel/ip-address.reel/ip-address.html
+++ b/ui/controls/ip-aliases.reel/ip-address.reel/ip-address.html
@@ -48,10 +48,7 @@
             "prototype": "core/converter/validator/ipv4-validator"
         },
         "ipv4_netmask_converter": {
-            "prototype": "core/converter/ipv4-netmask-converter",
-            "properties": {
-                "validator": {"@": "ipv4_netmask_validator"}
-            }
+            "prototype": "core/converter/ipv4-netmask-converter"
         },
         "ipv4_netmask_validator": {
             "prototype": "core/converter/validator/ipv4-netmask-validator"
