hide row actions on boot environment table

--- a/ui/sections/system/inspectors/boot-pool.reel/boot-environment-table.reel/boot-environment-table.html
+++ b/ui/sections/system/inspectors/boot-pool.reel/boot-environment-table.reel/boot-environment-table.html
@@ -15,6 +15,7 @@
             "prototype": "blue-shark/ui/tables/table-editable.reel",
             "properties": {
                 "element": {"#": "table"},
+                "showRowActions": false,
                 "columns": [
                     {
                         "value": "Name"
