fix bug on container image selection

--- a/ui/sections/containers/controls/docker-image-search.reel/docker-image-search.html
+++ b/ui/sections/containers/controls/docker-image-search.reel/docker-image-search.html
@@ -10,7 +10,8 @@
                 "imageComponent": {"@": "image"}
             },
             "bindings": {
-                "selectedRow": {"<-": "@image.selectedRows.one() && @image.selectedRows.one().object"}
+                "selectedRow": {"<-": "@image.selectedRows.one() && @image.selectedRows.one().object"},
+                "hasImage": {"<-": "@image.rows && @image.rows.length > 0"}
             }
         },
 
@@ -85,6 +86,7 @@
                 "element": {"#": "entry"}
             },
             "bindings": {
+                "imageElement": {"<-": "@image.element"},
                 "object": {"<-": "@image:rowIteration.object.object"},
                 "context": {"<-": "@owner.context"}
             }
